package app.domain.model;

public class LaboratoryCoordinator extends Employee{


    public LaboratoryCoordinator(String roleId, String name, String address, String phoneNumber, String email, String socCode, Lab lab) {
        super(roleId, name, address, phoneNumber, email, socCode, lab);


    }


}
